CI/CD: Exclude UI tests from build - create separate uiTest task